[gd_scene load_steps=9 format=3 uid="uid://d4i873ru2skmw"]

[ext_resource type="Theme" uid="uid://ctqg0on3ebbdy" path="res://fanta_theme.tres" id="1_g3ee7"]
[ext_resource type="Script" path="res://src/screens/main/Main.gd" id="1_labyq"]
[ext_resource type="PackedScene" uid="uid://cmxee5ywoanvl" path="res://src/screens/main/player-list/PlayerList.tscn" id="2_o4m2h"]
[ext_resource type="PackedScene" uid="uid://dqr46eapnnw57" path="res://src/screens/main/assign-player/AssignPlayer.tscn" id="3_0h60k"]
[ext_resource type="PackedScene" uid="uid://cy6ujws16sijb" path="res://src/screens/main/team-overview/TeamOverview.tscn" id="3_nkpax"]
[ext_resource type="PackedScene" uid="uid://ddxmw2r05sce7" path="res://src/screens/main/history/History.tscn" id="4_in5of"]
[ext_resource type="PackedScene" uid="uid://by5xqkpdiio2o" path="res://src/screens/main/auction-control/AuctionControl.tscn" id="5_eb40d"]
[ext_resource type="PackedScene" uid="uid://cbv4v5l8m8s18" path="res://src/ui-components/timer/Timer.tscn" id="8_nny5i"]

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_g3ee7")
script = ExtResource("1_labyq")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = -72.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="HSplitContainer" type="HSplitContainer" parent="MarginContainer"]
layout_mode = 2

[node name="VSplitContainer" type="VSplitContainer" parent="MarginContainer/HSplitContainer"]
layout_mode = 2

[node name="PlayerList" parent="MarginContainer/HSplitContainer/VSplitContainer" instance=ExtResource("2_o4m2h")]
custom_minimum_size = Vector2(300, 600)
layout_mode = 2

[node name="History" parent="MarginContainer/HSplitContainer/VSplitContainer" instance=ExtResource("4_in5of")]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HSplitContainer"]
layout_mode = 2
theme_override_constants/separation = 60

[node name="AuctionControl" parent="MarginContainer/HSplitContainer/VBoxContainer" instance=ExtResource("5_eb40d")]
layout_mode = 2

[node name="TeamOverview" parent="MarginContainer/HSplitContainer/VBoxContainer" instance=ExtResource("3_nkpax")]
layout_mode = 2

[node name="AssignPlayer" parent="." instance=ExtResource("3_0h60k")]
visible = false

[node name="Timer" parent="." instance=ExtResource("8_nny5i")]
visible = false
metadata/_edit_use_anchors_ = true

[node name="Menu" type="Button" parent="."]
layout_mode = 2
anchor_left = 0.912
anchor_top = 0.943
anchor_right = 0.954
anchor_bottom = 0.981
offset_left = -0.0401611
offset_top = -0.440002
offset_right = -0.680054
offset_bottom = 0.519897
text = "MENU"

[connection signal="active_player_change" from="MarginContainer/HSplitContainer/VSplitContainer/PlayerList" to="." method="_on_player_list_active_player_change"]
[connection signal="assign" from="MarginContainer/HSplitContainer/VBoxContainer/AuctionControl" to="." method="_on_auction_control_assign"]
[connection signal="auction" from="MarginContainer/HSplitContainer/VBoxContainer/AuctionControl" to="." method="_on_auction_control_auction"]
[connection signal="next" from="MarginContainer/HSplitContainer/VBoxContainer/AuctionControl" to="." method="_on_auction_control_next"]
[connection signal="previous" from="MarginContainer/HSplitContainer/VBoxContainer/AuctionControl" to="." method="_on_auction_control_previous"]
[connection signal="player_removed" from="MarginContainer/HSplitContainer/VBoxContainer/TeamOverview" to="." method="_on_team_overview_player_removed"]
[connection signal="assigned" from="AssignPlayer" to="." method="_on_assign_player_assigned"]
[connection signal="pressed" from="Menu" to="." method="_on_menu_pressed"]
